[package]
name = "cab_jup_enhanced_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "jupiter_arbitrage_bot_offchain"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1"
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
log = "0.4"
once_cell = "1.21"
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.3"
solana-relayer-adapter-rust = "3.3"
solana-rpc-client-nonce-utils = "2.3"
solana-sdk = "2.3"
spl-associated-token-account = "7.0"
spl-token = "8.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.jupiter-swap-api-client]
git = "https://github.com/vvizardev/jupiter-swap-api-client.git"

[dependencies.yellowstone-grpc-client]
git = "https://github.com/rpcpool/yellowstone-grpc.git"
tag = "v12.1.0+triton-ext.solana.3.1.8"

[dependencies.yellowstone-grpc-proto]
version = "12.1.0"
